--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "swaylock-blur"
-version = "0.1.0"
+version = "0.3.0"
 authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 i3ipc = "0.10.0"
 tempfile = "3.0.7"
+structopt = "0.2.15"
